+ new markup + tree view

--- a/Clients/LaserDynamics.Clients.WinForms/Main.resx
+++ b/Clients/LaserDynamics.Clients.WinForms/Main.resx
@@ -139,6 +139,61 @@
         B+8Hz3PHTzAAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="ImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>246, 17</value>
+  </metadata>
+  <data name="ImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB2
+        CgAAAk1TRnQBSQFMAgEBAwEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEAB/QB8wLyBvQC7wEc
+        AZIB7QHsAfgI6wH4Au8CHAGSAu0B7AH4BOsD9BAABP8C9AHzAfACBwHyAfQE/wHsARwBdAFzAVECSwJK
+        BiMBQwHsAnMFSwFKAkQBIwERAfAC/xAAA/8B8gHwAgcB7wLsAe8B8gT/AewBmgJ6AlgHUgJLARUB7AEc
+        AXQCUgMxA1IBSwFKARwC/xAAAf8B9AHyAbwBBwHvAfcBkgJtAewBBwHzA/8B7AOaBHoCWQNSATEBSwEU
+        AewBeQEcA3oDWQFTAVIBMQFLAW0C/xAAAf8B8APvAgcB9wJtAvgBBwH0Av8B7AEaAaACmgR6AVkBUwNS
+        AUsBFAHsAXkBHAGZA3oDWQFTAVIBKwFKAbwB/xAAAfEBBwHvAQcDvAHvAesB7AHtAesB7QHuAfQB/wFz
+        ARoBoAKaBHoCWQFTAlIBKgESAXMBegIcBXoCWQFTAVIBSgEcAf8QAALvAbwB8wH0AfMB8AHvAewB7wEH
+        AewB6wHsAfIB/wHtARoCoAKaBHoCWQFTAVIBKgHqAe0CmgEcAZoFegNZAUsBcwH0EAAB7wEHAfAC8QG8
+        AQcB7wH3AQcB7gHvAe0B7AHvAfEB7QEaA6ACmgR6AVkBUwFSATEBbQHtApoBHAGZBnoCWQFSAW0BBxAA
+        AfcBvALwAQcB7wH3Ae8CBwG8AfEB7wHsAesBBwEcARoBwwKgApoFegFZAVIBMQFtARwCmgGZARwJegF0
+        ARwQAAEHAe8BvALwAe4BBwK8BAcB7wHtAe8BHAEaAsMCoAKaBHoBWQJSAesBHAGaAaABmgEcBpkDeQF0
+        Ae0QAAHwAe8BvAPxAfIC8QHuAu8BBwG8Ae8BBwEcARoDwwKgApoEegFZAVIB+AEcAZoCoAOZARwBdAMc
+        AewDHBAAAfQB8gLwAfEC9AHzAfIB8AG8AQcB7wO8ARwBGgTDAqADmgN6AXkB+AEcBKAHegFzA/8QAAL/
+        AfMC8gHzAfQB8wPwAbwB7wEHAfAB8Q8cAewBHASgAZoBegQcAXQBcwP/EAAE/wHzA/EBBwG8AfEBvAEH
+        Ae4BvAHzARwFmQEcAXMBHAW8Ae4BBwEcAZoEoAF5AQcBvALuAgcD/xAABP8B9ALzAfEBBwHwAfID8QHy
+        Af8BHAGZAhoCmQEcAXMBBwf/Ae8FmQEcAfMI/xAAB/8B8gHwAfEB8wX/AXMFHAFKARwI/wHxBRwB8Qn/
+        EAABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/4EACw==
+</value>
+  </data>
   <metadata name="ErrorToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>127, 17</value>
   </metadata>
